CHANGES
*******

0.6 (unreleased)
================

- Nothing changed yet.


0.5 (2014-09-24)
================

- On some platforms and filesystems (such as Linux ext3, Mac OS X)
  ``os.path.getmtime()`` returns timestamps with the granularity of
  seconds instead of subseconds such as Linux ext4. We go for second
  granularity now by default for autoversioning as this should be good
  enough during development.

  The test for autoversioning was assuming sub-second granularity and
  this test failed. This test is now skipped on Mac OS X. What didn't
  help was weird code in BowerStatic that cut off the last bit of the
  microsecond isoformat -- this was removed.

  This fixes bug #20. (Thanks to Michael Howitz for the bug report)

- Display a nicer error messages when a component depends on another one
  that doesn't exist. Thanks for Michael Howitz for the improvement.

- Internal toposort module was not imported relative to package,
  which could lead to errors in some circumstances. Thanks TylorS for
  reporting! Fixes issue #24.

0.4 (2014-09-08)
================

- There was a bug in the new ``component(name)`` method to obtain the
  component, because it wouldn't work for local components. Fixing this
  properly took a significant refactoring:

  * the ComponentCollection gains its own fallback behavior, much
    simpler to implement than in LocalComponentCollection.

  * UrlComponent is now gone and Component gains that functionality; it
    keeps a reference to the collection itself now.

  * add a lot of free-standing functions to the methods.

  * an earlier hack passing the component collection through an argument
    is now gone.

- The new ``.component()`` API to get a component from a collection
  explicitly in order to get its URL is gone again as it conflicted
  with an earlier API on local component collections. Instead use
  ``collection.get_component(name)``.

0.3 (2014-08-28)
================
