@@ -71,6 +71,10 @@ directory is by registering it with the ``bower`` object::
 
   components = bower.components('components', '/path/to/bower_components')
 
+Since version 0.6, also relavtive paths are accepted::
+
+  components = bower.components('components', 'path/relative/to/calling/module')
+
 You can register multiple ``bower_components`` directories with the
 ``bower`` object. You need to give each a unique name; in the example
 it is ``components``. This name is used in the URL used to serve
