@@ -73,6 +73,11 @@ name of the component should be unique within the local registry, as
 well as not conflict with any component in the Bower components
 registry.
 
+Since version 0.6, also a relative path can be used for creating a
+local component::
+
+  local.component('path/relative/to/calling/module', version='1.1.0')
+
 ``dependencies`` is also picked up from ``bower.json``, but unlike for
 third party components these dependencies are not automatically
 installed.
